<resources>
    <string name="app_name">RU Cafe</string>
    <string name="donut_menu">Donut Menu</string>
    <string name="coffee_menu">Coffee Menu</string>
    <string name="cart_menu">Cart</string>
    <string name="database_menu">Store Orders</string>
    <string name="donut_flavor">Donut Flavor</string>
    <string name = "donut_added">Donut(s) has been added to the order</string>
    <string name = "coffee_added">Coffee has been added to the order</string>
    <string name = "order_placed">Order has been placed</string>
    <string name="empty_order">Order is empty. Please add items to the cart.</string>
    <string-array name = "flavors">
        <item>Chocolate</item>
        <item>Glazed</item>
        <item>Cinnamon</item>
        <item>Jelly</item>
        <item>Powder</item>
    </string-array>
    <string-array name = "quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name = "coffee_sizes">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string name="add_in">Add Ins</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="whipped">Whipped-Cream</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">subtotal</string>
    <string name="sales_tax">sales tax</string>
    <string name="total">total</string>
    <string name="add">Add to Order</string>
    <string name="place">Place Order</string>
    <string name="donut_image">Image of donuts</string>
    <string name="coffee_image">Image of coffee</string>
    <string name="cart_image">Image of shopping cart</string>
    <string name="orders_image">Image of list of orders</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_cart">Remove Item</string>
    <string name="remove_cart_warning">Are you sure you want to remove this item from the cart?</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_order_warning">Are you sure you want to cancel this order?</string>
</resources>