<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeOrder">

    <Button
        android:id="@+id/add_coffee"
        android:layout_width="270dp"
        android:layout_height="67dp"
        android:onClick="addCoffee"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="335dp"
        android:layout_height="298dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="108dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/add_in"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checked"
            android:text="@string/cream"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checked"
            android:text="@string/syrup"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checked"
            android:text="@string/milk"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/caramel"
            android:layout_width="123dp"
            android:layout_height="45dp"
            android:onClick="checked"
            android:text="@string/caramel"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/whipped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checked"
            android:text="@string/whipped"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="73dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/size"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/coffee_size"
            android:layout_width="107dp"
            android:layout_height="46dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="92dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/quantity"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/coffee_quantity"
            android:layout_width="29dp"
            android:layout_height="45dp"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/add_coffee"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="13dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coffee_subtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/subtotal" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>